--- a/content/templates/base-template.html
+++ b/content/templates/base-template.html
@@ -2,20 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>$title$</title>
 </head>
 <body>
     <header>
-        <ul class="menu">
-            <li class="menu-item"><a href="/">Portfolio</a></li>
-            <li class="menu-item"><a href="/equipment">Equipment</a></li>
-            <li class="menu-item"><a href="/about">About</a></li>
-        </ul>
+        <div class="header">
+            <div class="logo">Kiss Zoltán Béla</div>
+            <ul class="menu">
+                <li class="menu-item"><a href="/">Portfolio</a></li>
+                <li class="menu-item"><a href="/equipment">Equipment</a></li>
+                <li class="menu-item"><a href="/about">About</a></li>
+            </ul>
+        </div>
     </header>
     $body$
     <footer>
-        ©2025 Kiss Zoltán Béla
+        ©$year$ Kiss Zoltán Béla
     </footer>
 </body>
 </html>
