Added font and pictures, small changes

--- a/content/templates/base-template.html
+++ b/content/templates/base-template.html
@@ -6,19 +6,25 @@
     <title>$title$</title>
 </head>
 <body>
-    <header>
-        <div class="header">
-            <div class="logo">Kiss Zoltán Béla</div>
-            <ul class="menu">
-                <li class="menu-item"><a href="/">Portfolio</a></li>
-                <li class="menu-item"><a href="/equipment">Equipment</a></li>
-                <li class="menu-item"><a href="/about">About</a></li>
-            </ul>
+    <div class="page-wrapper">
+        <div class="page-container">
+            <header>
+                <div class="header">
+                    <div class="logo">Kiss Zoltán Béla</div>
+                    <ul class="menu">
+                        <li class="menu-item"><a href="/">Portfolio</a></li>
+                        <li class="menu-item"><a href="/equipment">Equipment</a></li>
+                        <li class="menu-item"><a href="/about">About</a></li>
+                    </ul>
+                </div>
+            </header>
+            <div class="body">
+                $body$
+            </div>
         </div>
-    </header>
-    $body$
-    <footer>
-        ©$year$ Kiss Zoltán Béla
-    </footer>
+        <footer>
+            © $year$ Kiss Zoltán Béla
+        </footer>
+    </div>
 </body>
 </html>
