--- a/content/templates/index-template.html
+++ b/content/templates/index-template.html
@@ -1,3 +1,6 @@
-<div class="wrap">
-    $for(photos)$ $body$ $endfor$
+<div class="index">
+    <h1>Photography Portfolio</h1>
+    <div class="wrap">
+        $for(photos)$ $body$ $endfor$
+    </div>
 </div>
