--- a/content/css/style.css
+++ b/content/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Inter", sans-serif;
+    src: url(fonts/Inter-VariableFont_opsz,wght.ttf);
+    font-style: normal;
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
         background: #1a1a1a;
@@ -19,6 +25,30 @@
 body {
     max-width: 100vw;
     overflow-x: hidden;
+    font-family: "Inter", sans-serif;
+}
+
+header {
+    background-color: var(--background);
+    position: sticky;
+    top: 0;
+}
+
+div.page-wrapper {
+    position: relative;
+    min-height: 100vh;
+}
+
+div.page-container {
+    padding-bottom: 2.5rem;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    text-align: center;
 }
 
 header div.header {
@@ -26,12 +56,24 @@ header div.header {
     flex-direction: column;
 }
 
+header div.logo {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+    margin-left: 0.5rem;
+    margin-bottom: -0.5rem;
+}
+
 header div.header ul.menu {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+header div.header ul.menu a {
+    padding: 1rem;
 }
 
 header div.header ul.menu a,
@@ -45,19 +87,61 @@ header div.header ul.menu li {
     list-style: none;
 }
 
-div.content {
+div.content.picture-display {
     max-width: 100vw;
-    margin-left: 20%;
-    margin-right: 20%;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: column;
 }
 
 div.content.picture-display img {
-    max-width: 100%;
+    max-width: fit-content;
+    max-height: 90vh;
+    aspect-ratio: 1;
+    background: rgb(255, 255, 255);
+}
+
+div.content.picture-display img {
+    max-width: fit-content;
     max-height: 90vh;
 }
 
 div.content.picture-display .details .title {
     font-size: 3.2rem;
+}
+
+div.wrap {
+    max-width: 100vw;
+    margin-left: 10%;
+    margin-right: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+div.wrap div.box {
+    margin: 1rem;
+    width: 400px;
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in;
+}
+
+div.wrap div.box:hover {
+    transform: scale(1.1);
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+div.wrap div.box a,
+div.wrap div.box img {
+    width: 100%;
+}
+
+div.index h1 {
+    text-align: center;
 }
